force-app/main/default/objects/Data_Table_Action__mdt/Data_Table_Action__mdt.object-meta.xml
<CustomObject>
    <label>Data Table Action</label>
    <pluralLabel>Data Table Actions</pluralLabel>
</CustomObject>