force-app/main/default/objects/Data_Table_Action__mdt/fields/Enable_Filter_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Enable_Filter_Conditions__c</fullName>
    <label>Enable Filter Conditions</label>
    <type>TextArea</type>
</CustomField>