force-app/main/default/objects/Data_Table_Action__mdt/fields/Is_Show_In_Modal__c.field-meta.xml
<CustomField>
    <fullName>Is_Show_In_Modal__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Show In Modal</label>
    <type>Checkbox</type>
</CustomField>