force-app/main/default/objects/Data_Table_Action__mdt/fields/New_Record_Default_Values__c.field-meta.xml
<CustomField>
    <fullName>New_Record_Default_Values__c</fullName>
    <label>New Record Default Values</label>
    <type>TextArea</type>
</CustomField>