force-app/main/default/objects/Data_Table_Action__mdt/fields/New_Record_sObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>New_Record_sObject_API_Name__c</fullName>
    <label>New Record sObject API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>