force-app/main/default/objects/Data_Table_Action__mdt/fields/Success_Message__c.field-meta.xml
<CustomField>
    <fullName>Success_Message__c</fullName>
    <label>Success Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>