force-app/main/default/objects/Data_Table_Action__mdt/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Apex Method</fullName>
                <default>true</default>
                <label>Apex Method</label>
            </value>
            <value>
                <fullName>URL Redirection</fullName>
            </value>
            <value>
                <fullName>Create Record</fullName>
            </value>
            <value>
                <fullName>Lightning Component</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>